--- a/app/views/RiskController/risk.html
+++ b/app/views/RiskController/risk.html
@@ -14,7 +14,7 @@
 					</td>
 				</tr>
 				#{/list}
-				#{else}<tr><td>&{"page.id.risk.nothing"}</td></tr>#{/else}
+				#{else}<tr><td>&{"page.risk.nothing"}</td></tr>#{/else}
 				</tbody>
 			</table>
 		</div>
@@ -27,34 +27,34 @@
 
 		<form action="#">
 			<div class="clearfix">
-				<label>&{'page.id.risk.overall'}</label>
+				<label>&{'page.risk.overall'}</label>
 				<div class="input stars overall-stars"><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a></div>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.including'}</label>
+				<label>&{'page.risk.including'}</label>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.recovery'}</label>
+				<label>&{'page.risk.recovery'}</label>
 				<div class="input recovery-number"><input class="span4 aligned numbers-only" type="text"/></div>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.worktime'}</label>
+				<label>&{'page.risk.worktime'}</label>
 				<div class="input worktime-number"><input class="span4 aligned numbers-only" type="text"/></div>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.money'}</label>
+				<label>&{'page.risk.money'}</label>
 				<div class="input money-number"><input class="span4 aligned numbers-only" type="text"/></div>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.human'}</label>
+				<label>&{'page.risk.human'}</label>
 				<div class="input stars human-stars"><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a></div>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.nature'}</label>
+				<label>&{'page.risk.nature'}</label>
 				<div class="input stars nature-stars"><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a></div>
 			</div>
 			<div class="clearfix">
-				<label>&{'page.id.risk.image'}</label>
+				<label>&{'page.risk.image'}</label>
 				<div class="input stars image-stars"><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a><a class="btn">&nbsp;</a></div>
 			</div>
 		</form>
