--- a/app/views/RiskController/threat.html
+++ b/app/views/RiskController/threat.html
@@ -3,8 +3,8 @@
 
 <div class='container'>
 	<div class='row'>
-		<div class='span8'><h2>&{'page.id.threat.fm'}</h2></div>
-		<div class='span8'><h2>&{'page.id.threat.or'}</h2></div>
+		<div class='span8'><h2>&{'page.threat.fm'}</h2></div>
+		<div class='span8'><h2>&{'page.threat.or'}</h2></div>
 	</div>
 	<div class='row'>
 		<div class='span8'>
@@ -14,12 +14,12 @@
 				<tr>
 					<td>${threat.name}</td>
 					<td class='tail'>
-						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.id.threat.link.start'}</a>
+						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.threat.link.start'}</a>
 						<a class='btn small' href='@{RiskController.deleteThreat(threat.id)}'>&{'form.delete'}</a>
 					</td>
 				</tr>
 				#{/list}
-				#{else}<tr><td>&{'page.id.threat.nothing'}</td></tr>#{/else}
+				#{else}<tr><td>&{'page.threat.nothing'}</td></tr>#{/else}
 				</tbody>
 			</table>
 		</div>
@@ -30,12 +30,12 @@
 				<tr>
 					<td>${threat.name}</td>
 					<td class='tail'>
-						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.id.threat.link.start'}</a>
+						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.threat.link.start'}</a>
 						<a class='btn small' href='@{RiskController.deleteThreat(threat.id)}'>&{'form.delete'}</a>
 					</td>
 				</tr>
 				#{/list}
-				#{else}<tr><td>&{'page.id.threat.nothing'}</td></tr>#{/else}
+				#{else}<tr><td>&{'page.threat.nothing'}</td></tr>#{/else}
 				</tbody>
 			</table>
 		</div>
@@ -62,8 +62,8 @@
 
 <div class='container'>
 	<div class='row'>
-		<div class='span8'><h2>&{'page.id.threat.hf'}</h2></div>
-		<div class='span8'><h2>&{'page.id.threat.tf'}</h2></div>
+		<div class='span8'><h2>&{'page.threat.hf'}</h2></div>
+		<div class='span8'><h2>&{'page.threat.tf'}</h2></div>
 	</div>
 	<div class='row'>
 		<div class='span8'>
@@ -73,12 +73,12 @@
 				<tr>
 					<td>${threat.name}</td>
 					<td class='tail'>
-						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.id.threat.link.start'}</a>
+						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.threat.link.start'}</a>
 						<a class='btn small' href='@{RiskController.deleteThreat(threat.id)}'>&{'form.delete'}</a>
 					</td>
 				</tr>
 				#{/list}
-				#{else}<tr><td>&{'page.id.threat.nothing'}</td></tr>#{/else}
+				#{else}<tr><td>&{'page.threat.nothing'}</td></tr>#{/else}
 				</tbody>
 			</table>
 		</div>
@@ -89,12 +89,12 @@
 				<tr>
 					<td>${threat.name}</td>
 					<td class='tail'>
-						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.id.threat.link.start'}</a>
+						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.threat.link.start'}</a>
 						<a class='btn small' href='@{RiskController.deleteThreat(threat.id)}'>&{'form.delete'}</a>
 					</td>
 				</tr>
 				#{/list}
-				#{else}<tr><td>&{'page.id.threat.nothing'}</td></tr>#{/else}
+				#{else}<tr><td>&{'page.threat.nothing'}</td></tr>#{/else}
 				</tbody>
 			</table>
 		</div>
@@ -121,7 +121,7 @@
 
 <div class='container'>
 	<div class='row'>
-		<div class='span8'><h2>&{'page.id.threat.da'}</h2></div>
+		<div class='span8'><h2>&{'page.threat.da'}</h2></div>
 	</div>
 	<div class='row'>
 		<div class='span8'>
@@ -131,12 +131,12 @@
 				<tr>
 					<td>${threat.name}</td>
 					<td class='tail'>
-						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.id.threat.link.start'}</a>
+						<a threat-id='${threat.id}' class='select-primary-threat btn #{ifnot threat.assets.size()}primary#{/ifnot} small'>&{'page.threat.link.start'}</a>
 						<a class='btn small' href='@{RiskController.deleteThreat(threat.id)}'>&{'form.delete'}</a>
 					</td>
 				</tr>
 				#{/list}
-				#{else}<tr><td>&{'page.id.threat.nothing'}</td></tr>#{/else}
+				#{else}<tr><td>&{'page.threat.nothing'}</td></tr>#{/else}
 				</tbody>
 			</table>
 		</div>
@@ -158,7 +158,7 @@
 		#{form @RiskController.bindThreatToAsset()}
 		<input type="hidden" name="threatId"/>
 
-		<h2>&{'page.id.asset.supporting.hardware'}</h2>
+		<h2>&{'page.asset.supporting.hardware'}</h2>
 
 		<ul class="inputs-list">
 		#{list items:supportingHardwareAssets, as:'asset'}
@@ -169,10 +169,10 @@
 				</label>
 			</li>
 		#{/list}
-		#{else}<li>&{'page.id.asset.nothing'}</li>#{/else}
+		#{else}<li>&{'page.asset.nothing'}</li>#{/else}
 		</ul>
 
-		<h2>&{'page.id.asset.supporting.software'}</h2>
+		<h2>&{'page.asset.supporting.software'}</h2>
 
 		<ul class="inputs-list">
 		#{list items:supportingSoftwareAssets, as:'asset'}
@@ -183,10 +183,10 @@
 				</label>
 			</li>
 		#{/list}
-		#{else}<li>&{'page.id.asset.nothing'}</li>#{/else}
+		#{else}<li>&{'page.asset.nothing'}</li>#{/else}
 		</ul>
 
-		<h2>&{'page.id.asset.supporting.network'}</h2>
+		<h2>&{'page.asset.supporting.network'}</h2>
 
 		<ul class="inputs-list">
 		#{list items:supportingNetworkAssets, as:'asset'}
@@ -197,10 +197,10 @@
 				</label>
 			</li>
 		#{/list}
-		#{else}<li>&{'page.id.asset.nothing'}</li>#{/else}
+		#{else}<li>&{'page.asset.nothing'}</li>#{/else}
 		</ul>
 
-		<h2>&{'page.id.asset.supporting.personnel'}</h2>
+		<h2>&{'page.asset.supporting.personnel'}</h2>
 
 		<ul class="inputs-list">
 		#{list items:supportingPersonnelAssets, as:'asset'}
@@ -211,10 +211,10 @@
 				</label>
 			</li>
 		#{/list}
-		#{else}<li>&{'page.id.asset.nothing'}</li>#{/else}
+		#{else}<li>&{'page.asset.nothing'}</li>#{/else}
 		</ul>
 
-		<h2>&{'page.id.asset.supporting.site'}</h2>
+		<h2>&{'page.asset.supporting.site'}</h2>
 
 		<ul class="inputs-list">
 		#{list items:supportingSiteAssets, as:'asset'}
@@ -225,10 +225,10 @@
 				</label>
 			</li>
 		#{/list}
-		#{else}<li>&{'page.id.asset.nothing'}</li>#{/else}
+		#{else}<li>&{'page.asset.nothing'}</li>#{/else}
 		</ul>
 
-		<h2>&{'page.id.asset.supporting.organization'}</h2>
+		<h2>&{'page.asset.supporting.organization'}</h2>
 
 		<ul class="inputs-list">
 		#{list items:supportingOrganizationAssets, as:'asset'}
@@ -239,7 +239,7 @@
 				</label>
 			</li>
 		#{/list}
-		#{else}<li>&{'page.id.asset.nothing'}</li>#{/else}
+		#{else}<li>&{'page.asset.nothing'}</li>#{/else}
 		</ul>
 
 		#{/form}
